# alignment-handbook

./: .gitignore  main.py  pyproject.toml
sh_ror/: run.sh
