[project]
name = "alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "datasets>=4.2.0",
    "deepspeed>=0.18.0",
    "einops>=0.8.1",
    "evaluate>=0.4.6",
    "fugashi>=1.5.1",
    "huggingface-hub>=0.35.3",
    "ini2toml>=0.15",
    "isort>=7.0.0",
    "jinja2>=3.1.6",
    "liger-kernel>=0.6.2",
    "ninja>=1.13.0",
    "numpy>=2.3.4",
    "packaging>=25.0",
    "parameterized>=0.9.0",
    "peft>=0.17.1",
    "protobuf>=6.33.0",
    "pytest>=8.4.2",
    "safetensors>=0.6.2",
    "scipy>=1.16.2",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "trl>=0.19.1",
    "wandb>=0.22.2",
]